MDEV-4123 fix.

Missed update_used_tables() call for multi-update values.